[metadata]
name = kloudbuster
summary = KloudBuster is an open source tool that allows anybody to load any Neutron OpenStack cloud at massive data plane scale swiftly and effortlessly.
description-file =
    README.rst
author = KloudBuster team at OpenStack
author-email = kloudbuster-core@lists.launchpad.net
home-page = https://github.com/openstack/kloudbuster
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    kloudbuster

package_data =
    kloudbuster =
        template.html

[entry_points]
console_scripts =
    kloudbuster = kloudbuster.kloudbuster:main
    kb_gen_chart = kloudbuster.kb_gen_chart:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kloudbuster/locale
domain = kloudbuster

[update_catalog]
domain = kloudbuster
output_dir = kloudbuster/locale
input_file = kloudbuster/locale/kloudbuster.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kloudbuster/locale/kloudbuster.pot
